<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/backgroundimage3" />




    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_input"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />



    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:text="Forgot password?"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLink" />

    <TextView
        android:id="@+id/loginAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="44dp"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="Sign up"
        android:textColor="@color/accentColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/loginAcc"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
