<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/backgroundimage3" />

    <!-- Gradient Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="540dp"
        android:background="@drawable/rounded_input"
        android:hint="Username"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_input"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_input"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

    <!-- Already Have an Account? -->
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:text="Register Account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <!-- Sign In Link -->

    <TextView
        android:id="@+id/loginAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:text="Already have an account?"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <TextView
        android:id="@+id/signinLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="6dp"
        android:text="Login"
        android:textColor="@color/accentColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/loginAcc"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
